--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -891,8 +891,8 @@
     "oven_atag_extras_keep_warm_content": "This function keeps the cooked dishes warm.",
     "oven_atag_extras_plate_warming": "PLATE WARMING",
     "oven_atag_extras_plate_warming_content": "This function is used to preheat tableware, so that the served food stays hot longer.",
-    "oven_atag_extras_steam_clean": "Steam cleaning system",
-    "oven_atag_extras_steam_clean_content": "Staines will be soaked so that they are easiliy removed with a cloth once the Steam Clean program is finished.",
+    "oven_atag_extras_steam_clean": "Steam clean",
+    "oven_atag_extras_steam_clean_content": "Stains get soaked and can easily be removed with a cloth once the Steam Clean program is finished.",
     "oven_atag_extras_regenerate": "REGENERATE",
     "oven_atag_extras_regenerate_content": "This function is used to regenerate precooked dishes.Through the use of steam,there is no loss of quality.Taste and texture are preserved as when freshly prepared.Different dishes can be prepared simultaneously.",
     "oven_atag_extras_send_to_oven": "SEND TO OVEN",
@@ -1098,7 +1098,7 @@
     "red": "Red",
     "white": "White",
     "sparkling": "Sparkling",
-    "rose": "Rose",
+    "rose": "Rosé",
     "dessert": "Dessert",
     "fortified": "Fortified",
     "wine_name": "Wine name",
@@ -2076,7 +2076,6 @@
     "ble_ota_step_stop_title": "Stop firmware update?",
     "ble_ota_step_progress_hint1": "Preparing the update…",
     "ble_ota_step_progress_hint2": "Updating…",
-    "ble_ota_error_sub_title": "Firmware update unsuccessful",
     "ble_ota_error_content": "Keep your devices near while updating.\nCheck your Bluetooth connection.",
     "ble_ota_error_exit": "EXIT UPDATE",
     "ble_ota_unselect_device": "No Bluetooth accessory selected!",
@@ -3609,7 +3608,7 @@
     "recipe_type_desserts": "Desserts",
     "recipe_type_lunches": "Lunches",
     "recipe_type_main_dishes": "Main Dishes",
-    "recipe_type_sider_disher": "Attachments",
+    "recipe_type_sider_disher": "Side dishes",
     "recipe_main_ingredients_vegetables": "Vegetables",
     "recipe_main_ingredients_savoury_pastries": "Savoury Pastries",
     "recipe_main_ingredients_grains": "Grains",
@@ -3831,7 +3830,7 @@
     "gorenje_wm_ads_activewear": "Activewear",
     "gorenje_wm_ads_curtains": "Curtains",
     "gorenje_wm_ads_hygiene": "Hygiene",
-    "On": "开启",
+    "On": "On",
     "can_not_start_eco": "The device does not support ECO in the off state and cannot start ECO.",
     "current_mode_not_support_eco": "The current mode does not support ECO.",
     "device_standby_can_not_start_eco": "The device is in standby mode and cannot start ECO.",
@@ -3907,7 +3906,7 @@
     "rf_uv_tech_desc": "The built-in UV lighting will reduce 99.99%* of bacteria in the waterway automatically.",
     "other_rinse": "other rinse",
     "search_again_title": "Confirm to search again?",
-    "search_again_content": "Re searching will update the number of devices,and the control function will not be available during the re searching process.",
+    "search_again_content": "Re searching will update the number of devices, and the control function will not be available during the re searching process.",
     "select_at_least_one_device": "Please select at least one device",
     "ri_select_address_tips": "If you select an address that is not your default one, the selected address will become the default.",
     "default_address": "Default Address",
@@ -3944,5 +3943,23 @@
     "wm86_and_td76_ui1_p_step2": "Turn the know to move to \"Add device\" and click on \"Enter\".",
     "how_data_is_calculate_key": "How data is calculate",
     "energy_select_device_ktip_key": "Please be aware that you can only start the ECO mode of devices in operation.",
-    "CL_SM_CM_devices_are_running_eco_mode": "## devices are running ECOmode"
+    "CL_DV_OV_g800_mode_hotair_bottom": "Hot air + Bottom heater",
+    "CL_SM_CM_devices_are_running_eco_mode": "## devices are running ECOmode",
+    "CL_DV_OV_g800_steam_intensity": "Steam intensity",
+    "CL_DV_OV_g800_steam_duration": "Steam duration",
+    "CL_CF_AB_about_cl_content": "ConnectLife is a comprehensive IoT platform that seamlessly integrates smart appliances from Hisense group brands, offering users the ability to control and monitor their devices remotely. It provides real-time notifications, automated after-sales support, and helpful assists for optimal appliance use. The platform emphasizes convenience, efficiency, and a personalized smart home experience, making everyday tasks simpler and more enjoyable. ConnectLife's ongoing evolution promises to expand its capabilities, further enhancing the modern smart home ecosystem.",
+    "CL_CF_AB_licenses_and_attributions": "Licenses and Attributions",
+    "CL_CF_AB_licenses_content": "This application uses the following open-source projects and assets:\n\nFont: Roboto\nLicensed under the Apache License, Version 2.0\u2028Copyright 2011 Google Inc.",
+    "CL_CF_AB_term_and_cond": "Terms and conditions",
+    "CL_CF_LG_enduser_terms": "End user terms and conditions",
+    "CL_CF_LG_enduser_consent_title": "Data Privacy Consent",
+    "CL_CF_LG_enduser_consent_content": "With this consent you confirm that you are fully aware of the purpose of the processing of your personal data as determined by the Data Protection Policy (URL) and you agree that the company ConnectLife, LLC. may use your personal data for the services as stated below.",
+    "CL_CF_LG_accept_all": "Accept All",
+    "CL_CF_LG_product_feedback": "Invitation to Submit Product Feedback",
+    "CL_CF_LG_product_feedback_content": "We are committed to improve our products. We aim  to ensure that product reviews are submitted to actual purchaser or user with consent. We may contact you within 30 days of product delivery based on our legitimate interest to enhance product improvement, quality assurance, and customer satisfaction.",
+    "CL_CF_LG_receive_personalized_offers": "Receive Personalized Offers",
+    "CL_CF_LG_receive_content": "The purpose and basis is to enable the sending of marketing messages or to present a personalized offer based on your interests or to improve your user’s experience.",
+    "CL_CF_LG_contact": "You confirm that you are informed you can withdraw your consent give above at any time in the account settings or by contacting the following e-mail address: privacy@connectlife.io",
+    "CL_CF_LG_legal": "Legal",
+    "CL_CF_LG_enduser_privacy": "Data Privacy Policy"
 }
