--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -1,6 +1,6 @@
 {
     "dashboard_tip_empty": "У вас есть много возможностей при работе с вашими устройствами",
-    "dashboard_connect_tip": "",
+    "dashboard_connect_tip": "Подключайтесь и исследуйте",
     "dashboard_empty_qr_start": "Начните здесь",
     "dashboard_empty_add_appliance": "Добавить устройства",
     "dashboard_things_default": "ДОСТУПНЫЕ ДЕЙСТВИЯ",
@@ -2076,7 +2076,6 @@
     "ble_ota_step_stop_title": "Остановить обновление встроенного ПО?",
     "ble_ota_step_progress_hint1": "Подготовка обновления…",
     "ble_ota_step_progress_hint2": "Обновление…",
-    "ble_ota_error_sub_title": "Не удалось обновить встроенное ПО",
     "ble_ota_error_content": "Держите устройства рядом во время обновления. Проверьте соединение Bluetooth.",
     "ble_ota_error_exit": "ВЫХОД ИЗ ОБНОВЛЕНИЯ",
     "ble_ota_unselect_device": "Устройство Bluetooth не выбрано!",
@@ -2602,7 +2601,7 @@
     "fridge_evaporator_sensor": "Сенсор испарителя xxxxx",
     "fridge_open_door_alarm": "Открывание и закрывание двери xxxxx",
     "fridge_room_over_temp_alarm": "Температура вашего xxxxx",
-    "update_now": "",
+    "update_now": "Обновить сейчас",
     "hour_f_d": "часов",
     "interior_light_at_power_off": "Внутреннее освещение при выключенном питании",
     "light_switch": "ВКЛЮЧАТЕЛЬ ОСВЕЩЕНИЯ",
@@ -2622,10 +2621,10 @@
     "wine_notes_too_long": "ноты слишком длинные",
     "wine_cabinet_zone": "Зона винного шкафа",
     "change_wifi_program": "Изменить программу Wi-Fi",
-    "change_wifi_program_desc": "",
+    "change_wifi_program_desc": "Вы собираетесь заменить существующую программу xxxx на вашем устройстве в позиции Wi-Fi на новую программу xxx.",
     "active_wifi_program": "Активная программа Wi-Fi",
-    "change_wifi_program_upper": "",
-    "change_wifi_program_tips": "",
+    "change_wifi_program_upper": "ИЗМЕНИТЬ ПРОГРАММУ Wi-Fi",
+    "change_wifi_program_tips": "Выберите нужную программу на своем устройстве в разделе «Программа Wi-Fi».",
     "adding_program_to_the_device": "Добавление программы на устройство.",
     "adding_program_to_the_device_tips": "Это может занять до 30 секунд. Все остальные функции на устройстве отключены.",
     "january_all": "Янв",
@@ -2786,7 +2785,7 @@
     "ac_energy_send": "Проверять",
     "ac_energy_send_error": "Письмо будет отправлено на этот адрес позже.",
     "firmware_update_failed_notice_1": "Одно и то же электронное письмо можно отправить только один раз в течение 10 минут.",
-    "ac_fixed": "",
+    "ac_fixed": "Зафиксированный",
     "ac_mixed": "Смешанный",
     "faq_fullname": "Часто задаваемые вопросы",
     "hi_ser": "Помощь Поддержка",
@@ -2855,7 +2854,7 @@
     "oven_atag_extras_clean_with_preserving": "Сохранение",
     "oven_atag_extras_clean_with_preserving_content": "Процесс, с помощью которого мы продлеваем срок хранения продуктов питания.",
     "device_has_available_upgrade_strategy": "Для этого устройства доступна стратегия обновления.",
-    "bake_step_gratin_below": "",
+    "bake_step_gratin_below": "Гратен снизу",
     "update_device_firmware": "Обновление прошивки устройства",
     "app_update_title": "Обновление приложения",
     "air_care": "Уход за воздухом",
@@ -3088,11 +3087,11 @@
     "scan_again": "сканировать еще раз",
     "last_scanned": "Последнее сканирование",
     "energy_used": "Потребляемая энергия",
-    "dw_statistics_desc": "",
+    "dw_statistics_desc": "Эти статистические данные основаны на сетевой статистике, и часть данных основана на измеренных в лабораторных условиях, только для справки пользователей.",
     "total_cycles": "",
     "dw_error_f56": "",
     "washer_dishes_stop": "",
-    "washer_stopped": "",
+    "washer_stopped": "Стирка в ## остановлена.",
     "dw_dish_clean": "",
     "dw_error_f43": "",
     "dw_error_f65": "",
@@ -3190,30 +3189,30 @@
     "system_settings_content": "Установите яркость экрана вашего устройства, измените цветовую тему, размер шрифта и установите, когда экран вашего устройства переходит в режим ожидания.",
     "download_failed": "Загрузка не удалась",
     "successfully_downloaded": "Успешно скачано",
-    "program_eco_cotton": "",
-    "program_storage_dry_cotton": "",
-    "program_iron_bry_cotton": "",
-    "program_mixed_laundry": "",
-    "program_wool_silk": "",
-    "program_synthetic": "",
-    "program_bedding_towels": "",
-    "program_down_bulky_items": "",
-    "program_quick_pro_cotton": "",
-    "program_shirts_blouses": "",
-    "program_anti_allergy": "",
-    "program_waterproofing": "",
-    "program_steam_wrinkle_card": "",
-    "program_airing": "",
-    "program_drum_sanitize": "",
-    "program_time_program": "",
+    "program_eco_cotton": "ЕСО Хлопок",
+    "program_storage_dry_cotton": "Хлопок в шкаф",
+    "program_iron_bry_cotton": "Хлопок под утюг",
+    "program_mixed_laundry": "Смешанное белье",
+    "program_wool_silk": "Шерсть/Шелк",
+    "program_synthetic": "Синтетика",
+    "program_bedding_towels": "Постельное белье/Полотенца",
+    "program_down_bulky_items": "Пух/Объемные вещи",
+    "program_quick_pro_cotton": "Экспресс Про Хлопок",
+    "program_shirts_blouses": "Рубашки/Блузы",
+    "program_anti_allergy": "Гипоаллергенная",
+    "program_waterproofing": "Пропитка",
+    "program_steam_wrinkle_card": "Разглаживание паром",
+    "program_airing": "Проветривание",
+    "program_drum_sanitize": "Дезинфекция барабана",
+    "program_time_program": "Сушка по времени",
     "cancel_all": "",
     "will_add_room_key": "## будет добавлен в список ваших комнат.",
-    "change_display_language_tips": "",
+    "change_display_language_tips": "Измените язык дисплея на вашем устройстве.",
     "add_rooms": "Добавить комнаты",
-    "adjust_brightness_tips": "",
+    "adjust_brightness_tips": "Отрегулируйте яркость дисплея вашего устройства.",
     "climate_control": "Климат-контроль",
     "rooms_multi_key": "комнаты",
-    "devices_multi_key": "",
+    "devices_multi_key": "устройства",
     "easy_view": "Простой просмотр",
     "easy_view_tips": "При активации текст на дисплее вашего устройства станет больше и его будет легче читать.",
     "display_logotype": "Отображение логотипа",
@@ -3232,7 +3231,7 @@
     "reset_program_list": "Сбросить список программ",
     "reset_program_list_tips": "Это вернет список программ к значениям по умолчанию на вашем устройстве и в приложении.",
     "my_address_desc": "",
-    "reset_program_list_pop_tips": "",
+    "reset_program_list_pop_tips": "Вы собираетесь обновить список программ. Процесс обновления отключит использование прибора примерно на 1 час. 2 минуты.",
     "stand_by_title": "Ваше устройство находится в режиме ожидания.",
     "stand_by_content": "1.Нажмите кнопку питания более 3 секунд, чтобы изменить статус.\n2.Если это не работает, пожалуйста, сначала разблокируйте.",
     "hum_box_title": "",
@@ -3248,13 +3247,13 @@
     "hide_program_desc": "",
     "water_drain_desc": "Эта функция позволяет вам выбрать, что прибор должен делать с конденсатом, образующимся во время сушки. «Банк» означает, что эта вода собирается в специальный резервуар для воды, который необходимо периодически опорожнять. «Слив» означает, что пользователь подключил прибор к сливу отходов, поэтому воду можно сливать напрямую, минуя бак.",
     "water_drain_tips": "Эта функция изначально установлена ​​на устройстве. Здесь будет показана опция по умолчанию, выбранная на устройстве.",
-    "air_care_general": "",
+    "air_care_general": "Общие",
     "air_care_pet": "",
     "air_care_child": "",
     "air_care_elder": "",
     "drum_illumination_desc": "Подсветка барабана освещает внутреннюю часть барабана, что помогает при загрузке и опорожнении машины: теперь легче увидеть оставшийся носок внутри барабана. Это также облегчает проверку при очистке подъемников и вставок подъемников.",
     "turn_on_drum_illumination": "Включить/выключить подсветку",
-    "wine_time": "",
+    "wine_time": "Время",
     "delete_account_camel_case": "Удалить учётную запись",
     "program_mode_desc": "Программный режим позволяет вам настроить программу сушки и настроить ее в соответствии с вашими потребностями. Ниже вы можете прочитать о различных режимах и их функционале.",
     "program_mode_available": "Доступны следующие режимы стирки:",
@@ -3346,14 +3345,14 @@
     "enter_your_room_name_key": "",
     "after_sale_report_failed_desc": "",
     "country_and_region": "",
-    "rf_ai": "",
-    "exit_ai_mode_toast": "",
+    "rf_ai": "ИИ",
+    "exit_ai_mode_toast": "Ручная регулировка температуры Выход из режима ECO",
     "rf_fuzzy_desc": "",
     "after_sale_unsupported_ts_tips": "К сожалению, информация по устранению неполадок для этого устройства в настоящее время недоступна. Наша команда работает над тем, чтобы в ближайшее время обеспечить поддержку этого устройства.",
     "after_sale_unsupported_ri_tips": "Сожалеем, но сообщить о проблеме с этим устройством в настоящее время невозможно. Наша команда работает над тем, чтобы в ближайшее время обеспечить поддержку этого устройства.",
     "degerming": "Дезинфекция",
     "no_spin": "Нет вращения",
-    "wm_program_mode_normal_desc": "",
+    "wm_program_mode_normal_desc": "Этот режим установлен по умолчанию и не будет вносить никаких изменений в выбранную вами программу.",
     "wm_program_mode_green_desc": "",
     "wm_program_mode_speed_desc": "",
     "wm_program_mode_night_desc": "",
@@ -3392,7 +3391,7 @@
     "choose_net_method": "Выберите метод подключения к сети",
     "wifi": "",
     "wired": "",
-    "appliance_been_found": "",
+    "appliance_been_found": "Найден прибор. Выберите прибор для добавления.",
     "wifi_id": "",
     "dw_remote_control_content": "",
     "dw_offline_title": "",
@@ -3405,7 +3404,7 @@
     "auto_super_rinse": "Автоматическое суперполоскание",
     "auto_super_rinse_desc": "",
     "enable_auto_super_rinse": "",
-    "dw_super_rinse": "",
+    "dw_super_rinse": "Суперполоскание",
     "dw_uv_mode": "UV режим",
     "dw_storage_mode": "",
     "air_shower": "Воздушный душ",
@@ -3422,7 +3421,7 @@
     "enable_auto_dose_desc": "",
     "tank_refilled_tips": "",
     "dosing_type": "",
-    "dose_level": "",
+    "dose_level": "уровень дозирования",
     "tank_a_dosing_type_desc": "",
     "tank_b_dosing_type_desc": "",
     "tank_a_dose_level_desc": "",
@@ -3431,7 +3430,7 @@
     "click_here": "",
     "oven_hi8_setup_1": "",
     "oven_hi8_setup_2": "",
-    "oven_hi8_setup_3": "",
+    "oven_hi8_setup_3": "Сеть прибора открыта для подключения. Нажмите «ДАЛЕЕ», чтобы продолжить.",
     "oven_hi8_pair_2": "",
     "oven_hi8_pair_3": "",
     "program_tank_a_desc": "",
@@ -3530,7 +3529,7 @@
     "blue_power_off_title": "Включите Bluetooth",
     "blue_permission_off_title": "ConnectLife не имеет разрешения на использование Bluetooth",
     "allow_bluetooth": "",
-    "blue_permission_off_pop_title": "",
+    "blue_permission_off_pop_title": "ConnectLife использует Bluetooth для поиска, подключения и определения местоположения близлежащих устройств. Вы всегда можете изменить настройки в системных настройках вашего телефона.",
     "blue_ios_setting": "",
     "blue_cancel": "ПРОДОЛЖИТЬ БЕЗ BLUETOOTH",
     "blue_power_off_pop_title": "ConnectLife хочет включить Bluetooth для этого устройства.",
@@ -3568,7 +3567,7 @@
     "add_new": "Добавить новый текст",
     "chef_recipe": "",
     "recipe_assistant": "",
-    "shopping_list": "",
+    "shopping_list": "Список покупок",
     "scanned_code_not_recognized": "Отсканированный код не был распознан",
     "scan_correct_device_code": "Сканируйте правильный код устройства",
     "best_for": "",
@@ -3594,7 +3593,7 @@
     "start_end_tip": "“Время начала” и “Время окончания” не могут быть одинаковыми.",
     "filter_result_of": "",
     "asko_oven_language": "",
-    "asko_oven_modes": "",
+    "asko_oven_modes": "Режимы",
     "asko_oven_control": "",
     "asko_oven_show_date": "",
     "previous": "",
@@ -3609,7 +3608,7 @@
     "recipe_type_desserts": "",
     "recipe_type_lunches": "",
     "recipe_type_main_dishes": "",
-    "recipe_type_sider_disher": "",
+    "recipe_type_sider_disher": "Гарнир",
     "recipe_main_ingredients_vegetables": "",
     "recipe_main_ingredients_savoury_pastries": "",
     "recipe_main_ingredients_grains": "",
@@ -3634,7 +3633,7 @@
     "our_recommendation": "",
     "no_search_results": "",
     "let_us_try_another_word": "",
-    "no_device_search": "",
+    "no_device_search": "Ни одно устройство не было найдено",
     "no_device_confirm": "Пожалуйста, подтвердите, что шлюз эффективно подключен к системе кондиционирования воздуха",
     "cook_with_##": "",
     "asko_oven_set_time_date": "",
@@ -3648,7 +3647,7 @@
     "wm_program_mode_time_care_1_desc": "",
     "asko_oven_adaptive_brightness": "",
     "online_tip": "онлайн",
-    "atw_tip": "",
+    "atw_tip": "ATW",
     "close_all": "Закрыть Все",
     "circle_mode_des": "Режим работы канала 1 и канала 2 одинаковый",
     "select_c_m": "Выберите Тип Цепи",
@@ -3657,7 +3656,7 @@
     "all_day": "Весь день",
     "asko_oven_display_setting_content": "",
     "asko_oven_brightness_content": "",
-    "asko_oven_display_content": "",
+    "asko_oven_display_content": "Установите размер шрифта для текста на дисплее вина.",
     "asko_oven_show_date_content": "",
     "asko_oven_show_bg_content": "",
     "asko_oven_light_setting_content": "",
@@ -3668,13 +3667,13 @@
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
     "asko_oven_control_settings": "",
-    "asko_oven_control_setting_content": "",
+    "asko_oven_control_setting_content": "Установите яркость экрана вашего устройства, измените цветовую тему, размер шрифта и установите, когда экран вашего устройства переходит в режим ожидания.",
     "asko_oven_camera_content": "",
-    "asko_oven_proximity_sensor": "",
+    "asko_oven_proximity_sensor": "Датчик приближения",
     "asko_oven_proximity_sensor_content": "",
     "asko_oven_distant_user_detected": "",
-    "asko_oven_display_change_to": "",
-    "asko_oven_light_change_to": "",
+    "asko_oven_display_change_to": "Изменения на экране",
+    "asko_oven_light_change_to": "Режим освещения",
     "asko_oven_door_sensor_wake_up": "",
     "asko_oven_door_sensor_wake_up_content": "",
     "asko_oven_brand_splash": "",
@@ -3684,8 +3683,8 @@
     "asko_oven_inactivity_time_out_content": "",
     "asko_oven_duration_of_clock": "",
     "asko_oven_duration_of_clock_content": "",
-    "dw_dish_assist": "",
-    "dw_help_support": "",
+    "dw_dish_assist": "Средство для мытья посуды",
+    "dw_help_support": "Помощь Поддержка",
     "dryer_link": "Ссылка на сушилку",
     "dryer_link_tips": "Если функция «Сушка для ворса» включена, программа стирки автоматически переносится на выбранную сушильную машину после завершения стирки.",
     "enable_on_this_appliance": "Включить на этом устройстве",
@@ -3694,7 +3693,7 @@
     "steam_disinfection": "",
     "asko_oven_light_brightness": "",
     "asko_oven_sound_alarms": "",
-    "asko_oven_eco_mode_content": "",
+    "asko_oven_eco_mode_content": "Помогает снизить потребление энергии и экономит электроэнергию. Устройство продолжит работать, но дополнительные функции, такие как освещение, дисплей, датчик приближения и дверной датчик, будут отключены.",
     "dw_error_desc_f11": "Водный выход",
     "dw_error_desc_f12": "Водный вход",
     "dw_error_desc_f40": "Входной клапан",
@@ -3728,7 +3727,7 @@
     "delete_all_schedu_tips": "Вы уверены, что хотите удалить все расписания?",
     "edit_scheduling": "Редактировать расписание",
     "target_key": "цель",
-    "asko_oven_factory_reset_content": "",
+    "asko_oven_factory_reset_content": "Прибор можно вернуть к заводским настройкам.",
     "invalid_input": "",
     "key": "Russian 俄语",
     "filename": "i18n_ru.json",
@@ -3906,8 +3905,8 @@
     "about_energy_saving_key": "Доля экономии энергии",
     "rf_uv_tech_desc": "Встроенное УФ-освещение автоматически уменьшит количество бактерий в водном пути на 99,99%.",
     "other_rinse": "",
-    "search_again_title": "",
-    "search_again_content": "",
+    "search_again_title": "Подтвердить повторный поиск?",
+    "search_again_content": "При повторном поиске количество устройств будет обновлено, и функция управления будет недоступна во время процесса поиска.",
     "select_at_least_one_device": "Пожалуйста, выберите как минимум одно устройство.",
     "ri_select_address_tips": "",
     "default_address": "",
@@ -3944,5 +3943,23 @@
     "wm86_and_td76_ui1_p_step2": "Поверните ноу, чтобы перейти к «Добавить устройство» и нажмите «Ввод».",
     "how_data_is_calculate_key": "Как рассчитываются данные",
     "energy_select_device_ktip_key": "Обратите внимание, что режим ECO можно запустить только на работающих устройствах.",
-    "CL_SM_CM_devices_are_running_eco_mode": "## устройств работают в режиме ECOmode"
+    "CL_DV_OV_g800_mode_hotair_bottom": "Вент. нагрев + нагрев снизу",
+    "CL_SM_CM_devices_are_running_eco_mode": "## устройств работают в режиме ECOmode",
+    "CL_DV_OV_g800_steam_intensity": "Интенсивность пара",
+    "CL_DV_OV_g800_steam_duration": "Продолжительность пара",
+    "CL_CF_AB_about_cl_content": "ConnectLife — это комплексная платформа Интернета вещей, которая легко интегрирует интеллектуальные устройства брендов группы Hisense, предлагая пользователям возможность удаленного управления и мониторинга своих устройств. Он предоставляет уведомления в режиме реального времени, автоматическую послепродажную поддержку и полезные советы по оптимальному использованию устройства. Платформа подчеркивает удобство, эффективность и персонализированный подход к умному дому, делая повседневные задачи проще и приятнее. Продолжающееся развитие ConnectLife обещает расширить его возможности, еще больше улучшая современную экосистему умного дома.",
+    "CL_CF_AB_licenses_and_attributions": "Лицензии и авторства",
+    "CL_CF_AB_licenses_content": "В этом приложении используются следующие проекты и ресурсы с открытым исходным кодом: \n\n Шрифт: Робото\n Лицензия Apache, версия 2.0. Авторские права принадлежат Google Inc., 2011 г.",
+    "CL_CF_AB_term_and_cond": "Условия и положения",
+    "CL_CF_LG_enduser_terms": "Условия для конечного пользователя",
+    "CL_CF_LG_enduser_consent_title": "Согласие на конфиденциальность данных",
+    "CL_CF_LG_enduser_consent_content": "Настоящим согласием вы подтверждаете, что полностью осознаете цель обработки ваших персональных данных, определенную Политикой защиты данных (URL), и соглашаетесь с тем, что компания ConnectLife, LLC. может использовать ваши персональные данные для услуг, указанных ниже.",
+    "CL_CF_LG_accept_all": "Принять все",
+    "CL_CF_LG_product_feedback": "Приглашение оставить отзыв о продукте",
+    "CL_CF_LG_product_feedback_content": "Мы стремимся улучшать нашу продукцию. Мы стремимся обеспечить, чтобы обзоры продуктов передавались фактическому покупателю или пользователю с его согласия. Мы можем связаться с вами в течение 30 дней с момента доставки продукта, исходя из нашей законной заинтересованности в улучшении продукта, обеспечении качества и удовлетворенности клиентов.",
+    "CL_CF_LG_receive_personalized_offers": "Получайте персональные предложения",
+    "CL_CF_LG_receive_content": "Целью и основанием является обеспечение возможности отправки маркетинговых сообщений или представления персонализированного предложения, основанного на ваших интересах, или улучшения опыта вашего пользователя.",
+    "CL_CF_LG_contact": "Вы подтверждаете, что вам сообщили, что вы можете отозвать свое согласие, данное выше, в любое время в настройках учетной записи или связавшись по следующему адресу электронной почты: Privacy@connectlife.io",
+    "CL_CF_LG_legal": "Юридический",
+    "CL_CF_LG_enduser_privacy": "Политика конфиденциальности данных"
 }
